--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+
+
 .not-found{
     margin: 50px;
 }
@@ -31,6 +33,8 @@
 
 .btn{
     background-color: black;
-    color: aliceblue;
+    color: rgb(143, 179, 211);
     padding: 20px;
+    font-size: 20px;
+    
 }
